# ai-candidate-discovery-ranking

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
pages/: 1_Leaderboard.py  2_Candidate_Profile.py  3_Analytics.py  4_Settings.py
src/features/: extract_features.py  filter_candidates.py
src/ingestion/: parse_candidates.py  parse_filtered_candidates.py  parse_job.py
src/intelligence/: candidate_intelligence.py  jd_intelligence.py
src/output/: generate_submission.py
src/ranking/: behavior_score.py  career_score.py  company_score.py  experience_score.py  groq_reranker.py  hybrid_ranker.py  skill_score.py
src/retrieval/: retrieve_candidates.py  retrieve_topk.py
src/utils/: prompt_builder.py
src/vectordb/: build_chroma_bge.py
