[project]
name = "hack-skill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "groq>=0.37.1",
    "jsonlines>=4.0.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "streamlit-aggrid>=1.2.1.post2",
    "tqdm>=4.68.3",
]
